Add Sanctum auth PoC
